src/objects/RT1__Recording__c.object
<CustomObject>
    <fields>
        <fullName>RT1__AccessCode__c</fullName>
        <label>Access Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__AllowOthersToInvite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Others to Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recordings</relationshipLabel>
        <relationshipName>Recordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__Desciption__c</fullName>
        <label>Desciption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__ImportRegistrations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import Registrations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Invitation_Message__c</fullName>
        <label>Invitation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RT1__InvitedRecordingRegistrations__c</fullName>
        <label>Invited</label>
        <summaryFilterItems>
            <field>RT1__Recording_Registration__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Invited</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__Recording_Registration__c.RT1__Recording__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__LastSyncCompleted__c</fullName>
        <label>LastSyncCompleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__NewRecordingRegistrations__c</fullName>
        <label>New</label>
        <summaryFilterItems>
            <field>RT1__Recording_Registration__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__Recording_Registration__c.RT1__Recording__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__NextMemberIndex__c</fullName>
        <description>Used for indexing synchronizations between calls</description>
        <label>NextMemberIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__NextRegistrationIndex__c</fullName>
        <description>For each registration added to the meeting that isn&apos;t associated to a lead or contact use the number in this field and increment it by 1.</description>
        <label>NextRegistrationIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__PasscodeEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passcode Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Passcode__c</fullName>
        <label>Passcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__PlaybackCount__c</fullName>
        <label>Playback Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__PlaybackNotificationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Playback Notification Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__PlaybackUrl__c</fullName>
        <label>Playback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RT1__RecordingId__c</fullName>
        <label>Recording Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Recording_Author__c</fullName>
        <label>Recording Author</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__TollFreeNumber__c</fullName>
        <label>Toll Free Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RT1__ViewedRecordingRegistrations__c</fullName>
        <label>Viewed</label>
        <summaryFilterItems>
            <field>RT1__Recording_Registration__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Viewed</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__Recording_Registration__c.RT1__Recording__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Recording</label>
    <listViews>
        <fullName>RT1__All_Recordings</fullName>
        <columns>NAME</columns>
        <columns>RT1__StartDate__c</columns>
        <columns>RT1__PlaybackCount__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Recordings</label>
    </listViews>
    <listViews>
        <fullName>RT1__My_Recordings</fullName>
        <columns>NAME</columns>
        <columns>RT1__StartDate__c</columns>
        <columns>RT1__Duration__c</columns>
        <columns>RT1__PlaybackCount__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Recordings</label>
    </listViews>
    <nameField>
        <label>Recording Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>